fix quirk where break-word-container stretched surrounding table to full width

--- a/src/styles/components/_lawmaker.scss
+++ b/src/styles/components/_lawmaker.scss
@@ -27,10 +27,13 @@
 }
 
 .lawmaker__break-word-container {
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-  word-wrap: break-word;
+  // breaks up long words on small screens
+  @media (max-width: 400px) {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    word-wrap: break-word;
+  }
 }
 
 .lawmaker__republican {
